# docs/swagger.json
@@ -11,6 +11,39 @@
         "version": "1.0"
     },
     "paths": {
+        "/account/getCode": {
+            "post": {
+                "description": "获取验证码",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get Code",
+                "operationId": "Get Code",
+                "parameters": [
+                    {
+                        "description": "获取验证码",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/web.GetCodeParam"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "$ref": "#/definitions/web.baseReturn"
+                        }
+                    }
+                }
+            }
+        },
         "/account/login": {
             "post": {
                 "description": "账号密码登录",
@@ -43,9 +76,57 @@
                     }
                 }
             }
+        },
+        "/account/mobileLogin": {
+            "post": {
+                "description": "验证码登录",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Mobile Login",
+                "operationId": "Mobile Login",
+                "parameters": [
+                    {
+                        "description": "用户登录",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/web.MobileLoginParames"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "$ref": "#/definitions/web.baseReturn"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "web.GetCodeParam": {
+            "type": "object",
+            "required": [
+                "codeType",
+                "mobile"
+            ],
+            "properties": {
+                "codeType": {
+                    "type": "string"
+                },
+                "mobile": {
+                    "type": "string"
+                }
+            }
+        },
         "web.LoginParames": {
             "type": "object",
             "required": [
@@ -57,6 +138,21 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "web.MobileLoginParames": {
+            "type": "object",
+            "required": [
+                "code",
+                "mobile"
+            ],
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "mobile": {
                     "type": "string"
                 }
             }
